added punctuation to main

--- a/demon.html
+++ b/demon.html
@@ -6,7 +6,7 @@
     <title>Demo</title>
 </head>
 <body>
-    <h1>welcome to my webpage</h1>
+    <h1 style="font-size: 20px;">welcome to my webpage</h1>
     <h2>This is other header</h2>
     github
 </body>
